# distkv

./: CMakeLists.txt  DEVELOPMENT.md  GETTING_STARTED.md  LICENSE  Makefile  PROJECT_CHECKLIST.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
benchmarks/: bench.cpp
client/: cli.cpp  client.cpp  client.h
include/: persistence.h  protocol.h  replication.h  server.h  storage.h
src/: main.cpp  persistence.cpp  protocol.cpp  replication.cpp  server.cpp  storage.cpp
tests/: test_storage.cpp
